// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PaymentMethodInput.vue should not trigger input event if new value is set programmatically 1`] = `
<div
  class="v-input payment-method-input v-text-field v-text-field--single-line v-select v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light"
  role="combobox"
>
  <div
    class="v-input__prepend-outer"
  >
    <div
      class="v-input__icon v-input__icon--prepend"
    >
      <i
        aria-hidden="true"
        class="v-icon material-icons theme--light"
      >
        credit_card
      </i>
    </div>
  </div>
  <div
    class="v-input__control"
  >
    <div
      class="v-input__slot"
    >
      <div
        class="v-select__slot"
      >
        <div
          class="v-select__selections"
        >
          <div
            class="v-select__selection v-select__selection--comma"
          >
            Debit Card
          </div>
          <input
            aria-label="Payment method"
            aria-readonly="false"
            autocomplete="on"
            readonly="readonly"
            type="text"
          />
        </div>
        <div
          class="v-input__append-inner"
        >
          <div
            class="v-input__icon v-input__icon--append"
          >
            <i
              aria-hidden="true"
              class="v-icon material-icons theme--light"
            >
              arrow_drop_down
            </i>
          </div>
        </div>
      </div>
      <div
        class="v-menu"
      >
        <div
          class="v-menu__content theme--light v-menu__content--auto "
          style="max-height: 200px; min-width: 0px; max-width: auto; top: 12px; left: 12px; transform-origin: top left; z-index: 0; display: none;"
        >
          <div
            class="v-select-list v-card theme--light"
          >
            <div
              class="v-list theme--light"
              role="list"
            >
              <div
                role="listitem"
              >
                <a
                  class="v-list__tile v-list__tile--link v-list__tile--active theme--light primary--text"
                >
                  <div
                    class="v-list__tile__content"
                  >
                    <div
                      class="v-list__tile__title"
                    >
                      Debit Card
                    </div>
                  </div>
                </a>
              </div>
              <div
                role="listitem"
              >
                <a
                  class="v-list__tile v-list__tile--link theme--light"
                >
                  <div
                    class="v-list__tile__content"
                  >
                    <div
                      class="v-list__tile__title"
                    >
                      Credit Card
                    </div>
                  </div>
                </a>
              </div>
              <div
                role="listitem"
              >
                <a
                  class="v-list__tile v-list__tile--link theme--light"
                >
                  <div
                    class="v-list__tile__content"
                  >
                    <div
                      class="v-list__tile__title"
                    >
                      Cash
                    </div>
                  </div>
                </a>
              </div>
              <div
                role="listitem"
              >
                <a
                  class="v-list__tile v-list__tile--link theme--light"
                >
                  <div
                    class="v-list__tile__content"
                  >
                    <div
                      class="v-list__tile__title"
                    >
                      PayPal
                    </div>
                  </div>
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PaymentMethodInput.vue should not trigger input event if new value is set programmatically 2`] = `
<div
  class="v-input payment-method-input v-text-field v-text-field--single-line v-select v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light"
  role="combobox"
>
  <div
    class="v-input__prepend-outer"
  >
    <div
      class="v-input__icon v-input__icon--prepend"
    >
      <i
        aria-hidden="true"
        class="v-icon material-icons theme--light"
      >
        credit_card
      </i>
    </div>
  </div>
  <div
    class="v-input__control"
  >
    <div
      class="v-input__slot"
    >
      <div
        class="v-select__slot"
      >
        <div
          class="v-select__selections"
        >
          <div
            class="v-select__selection v-select__selection--comma"
          >
            Credit Card
          </div>
          <input
            aria-label="Payment method"
            aria-readonly="false"
            autocomplete="on"
            readonly="readonly"
            type="text"
          />
        </div>
        <div
          class="v-input__append-inner"
        >
          <div
            class="v-input__icon v-input__icon--append"
          >
            <i
              aria-hidden="true"
              class="v-icon material-icons theme--light"
            >
              arrow_drop_down
            </i>
          </div>
        </div>
      </div>
      <div
        class="v-menu"
      >
        <div
          class="v-menu__content theme--light v-menu__content--auto "
          style="max-height: 200px; min-width: 0px; max-width: auto; top: 12px; left: 12px; transform-origin: top left; z-index: 0; display: none;"
        >
          <div
            class="v-select-list v-card theme--light"
          >
            <div
              class="v-list theme--light"
              role="list"
            >
              <div
                role="listitem"
              >
                <a
                  class="v-list__tile v-list__tile--link theme--light"
                >
                  <div
                    class="v-list__tile__content"
                  >
                    <div
                      class="v-list__tile__title"
                    >
                      Debit Card
                    </div>
                  </div>
                </a>
              </div>
              <div
                role="listitem"
              >
                <a
                  class="v-list__tile v-list__tile--link v-list__tile--active theme--light primary--text"
                >
                  <div
                    class="v-list__tile__content"
                  >
                    <div
                      class="v-list__tile__title"
                    >
                      Credit Card
                    </div>
                  </div>
                </a>
              </div>
              <div
                role="listitem"
              >
                <a
                  class="v-list__tile v-list__tile--link theme--light"
                >
                  <div
                    class="v-list__tile__content"
                  >
                    <div
                      class="v-list__tile__title"
                    >
                      Cash
                    </div>
                  </div>
                </a>
              </div>
              <div
                role="listitem"
              >
                <a
                  class="v-list__tile v-list__tile--link theme--light"
                >
                  <div
                    class="v-list__tile__content"
                  >
                    <div
                      class="v-list__tile__title"
                    >
                      PayPal
                    </div>
                  </div>
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PaymentMethodInput.vue should render correctly 1`] = `
<div
  class="v-input payment-method-input v-text-field v-text-field--single-line v-select v-input--hide-details theme--light"
  role="combobox"
>
  <div
    class="v-input__control"
  >
    <div
      class="v-input__slot"
    >
      <div
        class="v-select__slot"
      >
        <label
          aria-hidden="true"
          class="v-label theme--light"
          style="left: 0px; position: absolute;"
        >
          Payment method
        </label>
        <div
          class="v-select__selections"
        >
          <input
            aria-label="Payment method"
            aria-readonly="false"
            autocomplete="on"
            readonly="readonly"
            type="text"
          />
        </div>
        <div
          class="v-input__append-inner"
        >
          <div
            class="v-input__icon v-input__icon--append"
          >
            <i
              aria-hidden="true"
              class="v-icon material-icons theme--light"
            >
              arrow_drop_down
            </i>
          </div>
        </div>
      </div>
      <div
        class="v-menu"
      >
        <div
          class="v-menu__content theme--light v-menu__content--auto "
          style="max-height: 200px; min-width: 0px; max-width: auto; top: 12px; left: 12px; transform-origin: top left; z-index: 0; display: none;"
        >
          <div
            class="v-select-list v-card theme--light"
          >
            <div
              class="v-list theme--light"
              role="list"
            >
              <div
                role="listitem"
              >
                <a
                  class="v-list__tile v-list__tile--link theme--light"
                >
                  <div
                    class="v-list__tile__content"
                  >
                    <div
                      class="v-list__tile__title"
                    >
                      Debit Card
                    </div>
                  </div>
                </a>
              </div>
              <div
                role="listitem"
              >
                <a
                  class="v-list__tile v-list__tile--link theme--light"
                >
                  <div
                    class="v-list__tile__content"
                  >
                    <div
                      class="v-list__tile__title"
                    >
                      Credit Card
                    </div>
                  </div>
                </a>
              </div>
              <div
                role="listitem"
              >
                <a
                  class="v-list__tile v-list__tile--link theme--light"
                >
                  <div
                    class="v-list__tile__content"
                  >
                    <div
                      class="v-list__tile__title"
                    >
                      Cash
                    </div>
                  </div>
                </a>
              </div>
              <div
                role="listitem"
              >
                <a
                  class="v-list__tile v-list__tile--link theme--light"
                >
                  <div
                    class="v-list__tile__content"
                  >
                    <div
                      class="v-list__tile__title"
                    >
                      PayPal
                    </div>
                  </div>
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PaymentMethodInput.vue should render correctly with value 1`] = `
<div
  class="v-input payment-method-input v-text-field v-text-field--single-line v-select v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light"
  role="combobox"
>
  <div
    class="v-input__prepend-outer"
  >
    <div
      class="v-input__icon v-input__icon--prepend"
    >
      <i
        aria-hidden="true"
        class="v-icon material-icons theme--light"
      >
        credit_card
      </i>
    </div>
  </div>
  <div
    class="v-input__control"
  >
    <div
      class="v-input__slot"
    >
      <div
        class="v-select__slot"
      >
        <div
          class="v-select__selections"
        >
          <div
            class="v-select__selection v-select__selection--comma"
          >
            Debit Card
          </div>
          <input
            aria-label="Payment method"
            aria-readonly="false"
            autocomplete="on"
            readonly="readonly"
            type="text"
          />
        </div>
        <div
          class="v-input__append-inner"
        >
          <div
            class="v-input__icon v-input__icon--append"
          >
            <i
              aria-hidden="true"
              class="v-icon material-icons theme--light"
            >
              arrow_drop_down
            </i>
          </div>
        </div>
      </div>
      <div
        class="v-menu"
      >
        <div
          class="v-menu__content theme--light v-menu__content--auto "
          style="max-height: 200px; min-width: 0px; max-width: auto; top: 12px; left: 12px; transform-origin: top left; z-index: 0; display: none;"
        >
          <div
            class="v-select-list v-card theme--light"
          >
            <div
              class="v-list theme--light"
              role="list"
            >
              <div
                role="listitem"
              >
                <a
                  class="v-list__tile v-list__tile--link v-list__tile--active theme--light primary--text"
                >
                  <div
                    class="v-list__tile__content"
                  >
                    <div
                      class="v-list__tile__title"
                    >
                      Debit Card
                    </div>
                  </div>
                </a>
              </div>
              <div
                role="listitem"
              >
                <a
                  class="v-list__tile v-list__tile--link theme--light"
                >
                  <div
                    class="v-list__tile__content"
                  >
                    <div
                      class="v-list__tile__title"
                    >
                      Credit Card
                    </div>
                  </div>
                </a>
              </div>
              <div
                role="listitem"
              >
                <a
                  class="v-list__tile v-list__tile--link theme--light"
                >
                  <div
                    class="v-list__tile__content"
                  >
                    <div
                      class="v-list__tile__title"
                    >
                      Cash
                    </div>
                  </div>
                </a>
              </div>
              <div
                role="listitem"
              >
                <a
                  class="v-list__tile v-list__tile--link theme--light"
                >
                  <div
                    class="v-list__tile__content"
                  >
                    <div
                      class="v-list__tile__title"
                    >
                      PayPal
                    </div>
                  </div>
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PaymentMethodInput.vue should update v-model correctly 1`] = `
<div
  class="v-input payment-method-input v-text-field v-text-field--single-line v-select v-input--hide-details v-input--is-label-active v-input--is-dirty v-input--is-focused theme--light primary--text"
  role="combobox"
>
  <div
    class="v-input__prepend-outer"
  >
    <div
      class="v-input__icon v-input__icon--prepend"
    >
      <i
        aria-hidden="true"
        class="v-icon material-icons theme--light primary--text"
      >
        credit_card
      </i>
    </div>
  </div>
  <div
    class="v-input__control"
  >
    <div
      class="v-input__slot"
    >
      <div
        class="v-select__slot"
      >
        <div
          class="v-select__selections"
        >
          <div
            class="v-select__selection v-select__selection--comma"
          >
            Debit Card
          </div>
          <input
            aria-label="Payment method"
            aria-readonly="false"
            autocomplete="on"
            readonly="readonly"
            type="text"
          />
        </div>
        <div
          class="v-input__append-inner"
        >
          <div
            class="v-input__icon v-input__icon--append"
          >
            <i
              aria-hidden="true"
              class="v-icon material-icons theme--light primary--text"
            >
              arrow_drop_down
            </i>
          </div>
        </div>
      </div>
      <div
        class="v-menu"
      >
        <div
          class="v-menu__content theme--light v-menu__content--auto "
          style="max-height: 200px; min-width: 0px; max-width: auto; top: 12px; left: 12px; transform-origin: top left; z-index: 8; display: none;"
        >
          <div
            class="v-select-list v-card theme--light"
          >
            <div
              class="v-list theme--light"
              role="list"
            >
              <div
                role="listitem"
              >
                <a
                  class="v-list__tile v-list__tile--link v-list__tile--active theme--light primary--text"
                >
                  <div
                    class="v-list__tile__content"
                  >
                    <div
                      class="v-list__tile__title"
                    >
                      Debit Card
                    </div>
                  </div>
                </a>
              </div>
              <div
                role="listitem"
              >
                <a
                  class="v-list__tile v-list__tile--link theme--light"
                >
                  <div
                    class="v-list__tile__content"
                  >
                    <div
                      class="v-list__tile__title"
                    >
                      Credit Card
                    </div>
                  </div>
                </a>
              </div>
              <div
                role="listitem"
              >
                <a
                  class="v-list__tile v-list__tile--link theme--light"
                >
                  <div
                    class="v-list__tile__content"
                  >
                    <div
                      class="v-list__tile__title"
                    >
                      Cash
                    </div>
                  </div>
                </a>
              </div>
              <div
                role="listitem"
              >
                <a
                  class="v-list__tile v-list__tile--link theme--light"
                >
                  <div
                    class="v-list__tile__content"
                  >
                    <div
                      class="v-list__tile__title"
                    >
                      PayPal
                    </div>
                  </div>
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
